--- a/src/components/Sidebar/SideBar.scss
+++ b/src/components/Sidebar/SideBar.scss
@@ -1,16 +1,17 @@
-.bar {
+.side-container {
   position: fixed;
   display: flex;
   flex-flow: column nowrap;
   width: 11%;
   box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.1);
-  height: 100%;
+  height: 89%;
   top: 70px;
   left: 0;
   margin: 0;
   padding-top: 70px;
+  overflow: hidden;
 }
-.items {
+.side-items {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -22,4 +23,12 @@
   height: 10%;
   margin-left: 14%;
   border-bottom: 1px solid #d5d5d5;
+}
+.side-items:active {
+  color: #f05340;
+}
+
+.side-click {
+  background-color: #f0534d;
+  color: #ffff;
 }
