--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -2,7 +2,7 @@
   display: flex;
   box-shadow: 0px 2px 4px 0 rgba(0, 0, 0, 0.2);
   border-radius: 6px;
-  height: 50%;
+  height: 35vw;
   width: 27vw;
   transition: 0.3s;
   margin-bottom: 5vh;
