--- a/src/pages/Project/Project.scss
+++ b/src/pages/Project/Project.scss
@@ -15,7 +15,7 @@
 .header button {
   text-align: center;
   color: white;
-  background-color: #F05340;
+  background-color: #f05340;
   border: 0;
   border-radius: 4px;
   box-shadow: 2px 4px 8px rgba(0, 194, 217, 0.1);
