--- a/src/pages/ProjectDetail/ProjectDetail.module.css
+++ b/src/pages/ProjectDetail/ProjectDetail.module.css
@@ -1,3 +1,6 @@
+select {
+  margin-top:5vh;
+}
 .header {
   display: flex;
   align-items: center;
@@ -12,7 +15,6 @@
   letter-spacing: -0.5px;
   color: rgba(0, 0, 0, 0.87);
 }
-
 .dsnContainer {
   display: flex;
   align-items: center;
@@ -41,9 +43,6 @@
   height: 25%;
   margin: 0;
   padding: 0;
-}
-
-.timeSelectBox {
 }
 
 .Wrapper {
