--- a/src/pages/ProjectProfile/ProjectProfile.scss
+++ b/src/pages/ProjectProfile/ProjectProfile.scss
@@ -1,4 +1,4 @@
-.filterContainer {
+.filter-container {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -46,36 +46,32 @@ input + label {
   border-radius: 8px;
 }
 
-input[id="recent"]:checked + label {
+#recent:checked + label {
   background-color: #00c2d9;
 }
-input[id="old"]:checked + label {
+#old:checked + label {
   background-color: #00c2d9;
 }
-input[id="recent"] {
+#recent {
   display: none;
 }
-input[id="old"] {
+#old {
   display: none;
 }
 
-.logBox {
+.log-box {
   display: flex;
   flex-direction: column;
-  /* surface */
-
   background: #ffffff;
-  /* Outline */
-
   border: 1px solid #d5d5d5;
   border-radius: 4px;
   margin-top: 5%;
 }
 
-.onOff {
+.onoff {
   margin-right: 1%;
 }
 
-.profileCard {
+.profile-card {
   border: 1px solid;
 }
