Fix : Change Image to Icon

--- a/src/pages/Project/Project.scss
+++ b/src/pages/Project/Project.scss
@@ -1,6 +1,10 @@
+h1 {
+  font-family: "Pretendard";
+}
 .header {
   display: flex;
   align-items: center;
+  margin-top: 6vh;
   justify-content: space-between;
 }
 .header h1 {
