--- a/src/pages/ProjectDetail/ProjectDetail.scss
+++ b/src/pages/ProjectDetail/ProjectDetail.scss
@@ -1,4 +1,4 @@
-select {
+.graph-select {
   margin-top: 5vh;
 }
 .chart-container {
@@ -25,4 +25,7 @@ select {
   border-radius: 4px;
   margin-bottom: 1vh;
   margin-top: 3vh;
+}
+.space {
+  margin-top: 10vh;
 }
