--- a/src/components/NavigationBar/NavigationBar.scss
+++ b/src/components/NavigationBar/NavigationBar.scss
@@ -7,7 +7,6 @@
   left: 0;
   width: 100%;
   list-style-type: none;
-  margin: 0;
   padding: 0;
   align-items: center;
   background-color: #ffff;
@@ -15,6 +14,7 @@
   z-index: 999;
   height: 11%;
   box-shadow: 2px 4px 24px rgba(0, 0, 0, 0.1);
+  margin-bottom: 5vh;
 }
 .logo {
   display: flex;
