--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -1,5 +1,7 @@
 .card-container {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   box-shadow: 0px 2px 4px 0 rgba(0, 0, 0, 0.2);
   border-radius: 6px;
   height: 35vw;
@@ -30,7 +32,9 @@
 .chart-container {
   display: flex;
   height: 70%;
-  width: 100%;
+  width: 80%;
+  margin-bottom: 10vh;
+  margin-left: 2vw;
 }
 .title {
   font-size: 2em;
