--- a/src/pages/Project/Project.scss
+++ b/src/pages/Project/Project.scss
@@ -4,7 +4,7 @@ h1 {
 .header {
   display: flex;
   align-items: center;
-  margin-top: 6vh;
+  margin-top: 8vh;
   justify-content: space-between;
 }
 .header h1 {
@@ -23,8 +23,8 @@ h1 {
   border: 0;
   border-radius: 4px;
   box-shadow: 2px 4px 8px rgba(0, 194, 217, 0.1);
-  width: 220px;
-  height: 56px;
+  width: 25vw;
+  height: 3vh;
   font-family: "Pretendard";
   font-style: normal;
   font-weight: 600;
