--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -3,8 +3,9 @@ h1 {
 }
 .header {
   display: flex;
+  flex-direction: row;
   align-items: center;
-  margin-top: 6vh;
+  margin-top: 12vh;
   justify-content: space-between;
 }
 .header h1 {
@@ -22,9 +23,9 @@ h1 {
   background-color: #f05340;
   border: 0;
   border-radius: 4px;
-  box-shadow: 2px 4px 8px rgba(0, 194, 217, 0.1);
-  width: 220px;
-  height: 56px;
+  box-shadow: 2px 4px 8px rgba(20, 25, 26, 0.1);
+  width: "10%";
+  height: 3.5rem;
   font-family: "Pretendard";
   font-style: normal;
   font-weight: 600;
@@ -39,4 +40,20 @@ h1 {
   font-weight: 500;
   font-size: 18px;
   line-height: 24px;
+}
+
+.header button {
+  text-align: center;
+  color: white;
+  background-color: #f05340;
+  border: 0;
+  border-radius: 4px;
+  box-shadow: 2px 4px 8px rgba(0, 194, 217, 0.1);
+  width: 25vw;
+  height: 3vh;
+  font-family: "Pretendard";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 16px;
 }
