--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -6,6 +6,7 @@ h1 {
   flex-direction: row;
   align-items: center;
   margin-top: 12vh;
+  margin-left: 3vw;
   justify-content: space-between;
 }
 .header h1 {
