--- a/src/components/Sidebar/SideBar.scss
+++ b/src/components/Sidebar/SideBar.scss
@@ -2,26 +2,24 @@
   position: fixed;
   display: flex;
   flex-flow: column nowrap;
-  width: 11%;
+  width: 13%;
   box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.1);
   height: 89%;
-  top: 70px;
   left: 0;
   margin: 0;
-  padding-top: 70px;
+  margin-top: -1vh;
   overflow: hidden;
 }
 .side-items {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 20px;
+  font-size: 2vw;
   font-weight: 600;
   font-family: "Pretendard";
   font-style: normal;
   color: rgba(0, 0, 0, 0.87);
   height: 10%;
-  margin-left: 14%;
   border-bottom: 1px solid #d5d5d5;
 }
 .side-items:active {
