--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -25,13 +25,17 @@ h1 {
   border: 0;
   border-radius: 4px;
   box-shadow: 2px 4px 8px rgba(20, 25, 26, 0.1);
-  width: "10%";
+  width: 25vw;
   height: 3.5rem;
   font-family: "Pretendard";
   font-style: normal;
   font-weight: 600;
   font-size: 16px;
   line-height: 16px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
 }
 
 .header-sub-title {
@@ -41,20 +45,4 @@ h1 {
   font-weight: 500;
   font-size: 18px;
   line-height: 24px;
-}
-
-.header button {
-  text-align: center;
-  color: white;
-  background-color: #f05340;
-  border: 0;
-  border-radius: 4px;
-  box-shadow: 2px 4px 8px rgba(0, 194, 217, 0.1);
-  width: 25vw;
-  height: 3vh;
-  font-family: "Pretendard";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 16px;
 }
