selectImageListRow 선택 시 border가 바뀌는 로직 수정 및 useSlectImageRow 구현

--- a/src/components/SelectImageListRow/SelectImageListRow.scss
+++ b/src/components/SelectImageListRow/SelectImageListRow.scss
@@ -5,6 +5,22 @@
   border-bottom: 1px solid #d5d5d5;
 }
 
+.language-itmes {
+  outline: none;
+  background: white;
+  overflow: hidden;
+  width: 6.25rem;
+  height: 100px;
+
+  & {
+    background-size: "cover";
+    background-repeat: "no-repeat";
+    // border: 2px solid #daa;
+    outline: none;
+    background: white;
+    overflow: hidden;
+  }
+}
 .select-platform p {
   font-family: "Pretendard";
   font-style: normal;
