--- a/src/components/InfoBox/InfoBox.scss
+++ b/src/components/InfoBox/InfoBox.scss
@@ -1,20 +1,21 @@
 .error-detail-body-container {
-  position: relative;
   display: flex;
   flex: 1 1 40%;
   height: 200px;
-  /* surface */
   margin: 2% 3% 0 0;
   background: #ffffff;
-  /* Outline */
   border: 1px solid #d5d5d5;
   border-radius: 4px;
+  white-space: normal;
+  word-break: break-all;
 }
 
 .error-detail-body-container span {
+  position: relative;
   display: flex;
   flex: 1 1 0;
   height: 100%;
+  width: 100%;
   background-color: #facdc8;
   align-items: center;
   justify-content: center;
@@ -31,12 +32,10 @@
   padding: 0 5px 0 5px;
 }
 .error-detail-body-container div {
+  position: relative;
   flex: 8 1 0;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.error-detail-body-container {
-  display: flex;
+  white-space: normal;
 }
