--- a/src/components/InfoTags/InfoTags.scss
+++ b/src/components/InfoTags/InfoTags.scss
@@ -1,17 +1,10 @@
-.error-detail-detail-header {
-  margin-top: 16px;
-  display: flex;
-}
-
 .error-detail-event-env {
-  flex: 1 1 0;
-  margin: 0;
-  padding: 0;
+  flex: 1 1 43%;
   display: flex;
   flex-direction: column;
 }
 .error-detail-event-env p {
-  margin: 0 0 5% 0;
+  margin: 0 0 9% 0;
   padding: 0;
 }
 .error-detail-event-env div {
